force-app/main/default/objects/Progress_Exam__c/Progress_Exam__c.object-meta.xml
<CustomObject>
    <label>Progress Exam</label>
    <nameField>
        <displayFormat>EXM-{0000}</displayFormat>
        <label>Exam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Progress Exams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>