force-app/main/default/objects/Progress_Exam__c/fields/Exam_Title__c.field-meta.xml
<CustomField>
    <fullName>Exam_Title__c</fullName>
    <label>Exam Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>