force-app/main/default/objects/Progress_Exam__c/fields/Math_Correct__c.field-meta.xml
<CustomField>
    <fullName>Math_Correct__c</fullName>
    <label>Math Correct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>