force-app/main/default/objects/Progress_Exam__c/fields/Math_Net__c.field-meta.xml
<CustomField>
    <fullName>Math_Net__c</fullName>
    <formula>Math_Correct__c - (Math_Wrong__c / IF(OR(ISPICKVAL(Student__r.Grade__c, '9. Sınıf'), ISPICKVAL(Student__r.Grade__c, '10. Sınıf'), ISPICKVAL(Student__r.Grade__c, '11. Sınıf'), ISPICKVAL(Student__r.Grade__c, '12. Sınıf'), ISPICKVAL(Student__r.Grade__c, 'Mezun')), 3, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Math Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>