force-app/main/default/objects/Progress_Exam__c/fields/Math_Wrong__c.field-meta.xml
<CustomField>
    <fullName>Math_Wrong__c</fullName>
    <label>Math Wrong</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>