force-app/main/default/objects/Progress_Exam__c/fields/Teacher_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Feedback__c</fullName>
    <label>Teacher Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>