force-app/main/default/objects/Progress_Exam__c/fields/Total_Correct__c.field-meta.xml
<CustomField>
    <fullName>Total_Correct__c</fullName>
    <label>Total Correct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>